--- a/app/src/main/res/layout/fragment_becomepremium.xml
+++ b/app/src/main/res/layout/fragment_becomepremium.xml
@@ -106,6 +106,7 @@
         android:textColor="@color/white"
         android:textSize="12sp"
         android:padding="4dp"
+        android:visibility="gone"
         android:fontFamily="@font/inter_bold"
         android:id="@+id/tv_offer"
         android:background="@color/purple_500"
@@ -118,12 +119,13 @@
     <com.google.android.material.textview.MaterialTextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        tools:text="tv_actualprice"
+        tools:text="$2500"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:fontFamily="@font/inter_regular"
         android:id="@+id/tv_actualprice"
         android:layout_marginStart="16dp"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginEnd="16dp"
         app:layout_constraintStart_toEndOf="@id/tv_offer"
